--- a/dungeon-raider/pom.xml
+++ b/dungeon-raider/pom.xml
@@ -16,7 +16,7 @@
 	<description>This project created for the complete the minium requirements of  Programing Enviroment's course. This is a basic  Role Playing Game  where you can create a character, equiped it with items (shield, armor, weapon etc.) and go to an adventure into the dungeon! Unfortunatelly, the game was infinished yet, so you only can create your character and equip items in the shop.</description>
 	<url>http://www.inf.unideb.hu/~jeszy/progkorny/</url>
 	<developers>
-		
+
 		<developer>
 			<id>Lorin</id>
 			<name>Forján Valentin</name>
@@ -32,9 +32,14 @@
 		<developerConnection>scm:https://github.com/valesz91/DR2.git</developerConnection>
 		<url>https://github.com/valesz91/DR2.git</url>
 	</scm>
-	
-	<distributionManagement>
-	</distributionManagement>
+
+	  <distributionManagement>
+    <site>
+      <id>DR2.website</id>
+      <name>DungeonRaiderDocs</name>
+      <url>scp://hu/inf/unideb/public_html/</url>
+    </site>
+  </distributionManagement>
 
 	<build>
 		<pluginManagement>
@@ -169,6 +174,106 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
+				<reportSets>
+					<reportSet>
+						<id>default-aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>javadoc</report>
+						</reports>
+						<configuration>
+							<aggregate>true</aggregate>
+						</configuration>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.19.1</version>
+				<reportSets>
+					<reportSet>
+						<id>surefire-aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>report-only</report>
+						</reports>
+						<configuration>
+							<aggregate>true</aggregate>
+						</configuration>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.5</version>
+				<reportSets>
+					<reportSet>
+						<id>jxr-aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>jxr</report>
+						</reports>
+						<configuration>
+							<aggregate>true</aggregate>
+						</configuration>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
+				<reportSets>
+					<reportSet>
+						<id>cobertura-aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>cobertura</report>
+						</reports>
+						<configuration>
+							<aggregate>true</aggregate>
+						</configuration>
+					</reportSet>
+				</reportSets>
+				<configuration>
+					<excludes>
+						<exclude>${basedir}/src/test/*.class</exclude>
+					</excludes>
+				</configuration>
+
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<configLocation>${basedir}/src/main/resources/checkstyle.xml</configLocation>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<id>checkstyle-aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>checkstyle</report>
+						</reports>
+						<configuration>
+							<aggregate>true</aggregate>
+						</configuration>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+
+	</reporting>
 
 	<modules>
 		<module>dungeon-raider-common</module>
