--- a/dungeon-raider/dungeon-raider-web/pom.xml
+++ b/dungeon-raider/dungeon-raider-web/pom.xml
@@ -174,7 +174,7 @@
 					<reportSet>
 					<id>default-report</id>
 						<reports>
-							<report>default</report>
+							<report>javadoc</report>
 						</reports>
 					</reportSet>
 				</reportSets>
@@ -187,7 +187,7 @@
 					<reportSet>
 					<id>surefire-report</id>
 						<reports>
-							<report>surefire-report</report>
+							<report>report</report>
 						</reports>
 					</reportSet>
 				</reportSets>
