--- a/dungeon-raider/dungeon-raider-web/pom.xml
+++ b/dungeon-raider/dungeon-raider-web/pom.xml
@@ -172,7 +172,7 @@
 				<version>2.10.3</version>
 				<reportSets>
 					<reportSet>
-					<id>default-report</id>
+					<id>javadoc-report</id>
 						<reports>
 							<report>javadoc</report>
 						</reports>
