--- a/dungeon-raider/pom.xml
+++ b/dungeon-raider/pom.xml
@@ -37,7 +37,7 @@
     <site>
       <id>DR2.website</id>
       <name>DungeonRaiderDocs</name>
-      <url>scp://hu/inf/unideb/public_html/</url>
+      <url>file:///target/docs.com/</url>
     </site>
   </distributionManagement>
 
@@ -181,69 +181,69 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.3</version>
-				<reportSets>
-					<reportSet>
-						<id>default-aggregate</id>
-						<inherited>false</inherited>
-						<reports>
-							<report>javadoc</report>
-						</reports>
-						<configuration>
-							<aggregate>true</aggregate>
-						</configuration>
-					</reportSet>
-				</reportSets>
+<!-- 				<reportSets> -->
+<!-- 					<reportSet> -->
+<!-- 						<id>javadoc-report</id> -->
+<!-- 						<inherited>true</inherited> -->
+<!-- 						<reports> -->
+<!-- 							<report>javadoc</report> -->
+<!-- 						</reports> -->
+<!-- 						<configuration> -->
+<!-- 							<aggregate>true</aggregate> -->
+<!-- 						</configuration> -->
+<!-- 					</reportSet> -->
+<!-- 				</reportSets> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.19.1</version>
-				<reportSets>
-					<reportSet>
-						<id>surefire-aggregate</id>
-						<inherited>false</inherited>
-						<reports>
-							<report>report-only</report>
-						</reports>
-						<configuration>
-							<aggregate>true</aggregate>
-						</configuration>
-					</reportSet>
-				</reportSets>
+<!-- 				<reportSets> -->
+<!-- 					<reportSet> -->
+<!-- 						<id>surefire-report</id> -->
+<!-- 						<inherited>false</inherited> -->
+<!-- 						<reports> -->
+<!-- 							<report>report-only</report> -->
+<!-- 						</reports> -->
+<!-- 						<configuration> -->
+<!-- 							<aggregate>true</aggregate> -->
+<!-- 						</configuration> -->
+<!-- 					</reportSet> -->
+<!-- 				</reportSets> -->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>2.5</version>
-				<reportSets>
-					<reportSet>
-						<id>jxr-aggregate</id>
-						<inherited>false</inherited>
-						<reports>
-							<report>jxr</report>
-						</reports>
-						<configuration>
-							<aggregate>true</aggregate>
-						</configuration>
-					</reportSet>
-				</reportSets>
+<!-- 				<reportSets> -->
+<!-- 					<reportSet> -->
+<!-- 						<id>jxr-report</id> -->
+<!-- 						<inherited>false</inherited> -->
+<!-- 						<reports> -->
+<!-- 							<report>jxr</report> -->
+<!-- 						</reports> -->
+<!-- 						<configuration> -->
+<!-- 							<aggregate>true</aggregate> -->
+<!-- 						</configuration> -->
+<!-- 					</reportSet> -->
+<!-- 				</reportSets> -->
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
-				<reportSets>
-					<reportSet>
-						<id>cobertura-aggregate</id>
-						<inherited>false</inherited>
-						<reports>
-							<report>cobertura</report>
-						</reports>
-						<configuration>
-							<aggregate>true</aggregate>
-						</configuration>
-					</reportSet>
-				</reportSets>
+<!-- 				<reportSets> -->
+<!-- 					<reportSet> -->
+<!-- 						<id>cobertura-report</id> -->
+<!-- 						<inherited>false</inherited> -->
+<!-- 						<reports> -->
+<!-- 							<report>cobertura</report> -->
+<!-- 						</reports> -->
+<!-- 						<configuration> -->
+<!-- 							<aggregate>true</aggregate> -->
+<!-- 						</configuration> -->
+<!-- 					</reportSet> -->
+<!-- 				</reportSets> -->
 				<configuration>
 					<excludes>
 						<exclude>${basedir}/src/test/*.class</exclude>
@@ -256,20 +256,20 @@
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.17</version>
 				<configuration>
-					<configLocation>${basedir}/src/main/resources/checkstyle.xml</configLocation>
+					<configLocation>${basedir}/example/checkstyle.xml</configLocation>
 				</configuration>
-				<reportSets>
-					<reportSet>
-						<id>checkstyle-aggregate</id>
-						<inherited>false</inherited>
-						<reports>
-							<report>checkstyle</report>
-						</reports>
-						<configuration>
-							<aggregate>true</aggregate>
-						</configuration>
-					</reportSet>
-				</reportSets>
+<!-- 				<reportSets> -->
+<!-- 					<reportSet> -->
+<!-- 						<id>checkstyle-report</id> -->
+<!-- 						<inherited>false</inherited> -->
+<!-- 						<reports> -->
+<!-- 							<report>checkstyle</report> -->
+<!-- 						</reports> -->
+<!-- 						<configuration> -->
+<!-- 							<aggregate>true</aggregate> -->
+<!-- 						</configuration> -->
+<!-- 					</reportSet> -->
+<!-- 				</reportSets> -->
 			</plugin>
 		</plugins>
 
